# DeepKoopman_Catheter_Model_CPP

./: .gitignore  CMakeLists.txt  README.md
executable/: CMakeLists.txt  main.cpp
lib_predictor/model/scripted_model/: model_info.json
output_files/: matrices.csv  plot_AB.py  plot_outputs.py  plotter.py  sim_output.csv
tendon_library/include/: TendonDriven.hpp  TendonDriven_inertia_filipe.hpp  TendonDriven_inertia_navid.hpp  TendonDriven_original.hpp
